--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,7 @@
     height: 100vh;
     /* *Implantação do plano de fundo da página sem repetição */
     background: url('../assets/home-background.svg') no-repeat;
-    background-position: 35vw 15vh;
+    background-position: 35vw bottom;
     
     /* *Quero meu plano de fundo com 35 de ajuste de largura,
     *grudado na parte de baixo */
