--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -40,3 +40,86 @@ form {
     margin: 80px auto;
 
 } 
+
+form h1 {
+    font-size: 36px;
+}
+
+form fieldset {
+    margin-top: 64px;
+    border:0;
+}
+
+form legend {
+    margin-bottom: 40px;
+}
+
+form legend h2 {
+    font-size: 24px;
+}
+
+form .field {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 24px;
+}
+
+form .field-group {
+    display: flex;
+
+}
+
+form input,
+form select {
+    background-color: #f0f0f5;
+    border:0;
+
+/* ! Aumentando o preenchimento da caixa
+! de dados para 16 px cima/baixo e 24px laterais */
+    padding: 16px 24px;
+    font-size: 16px;
+    outline: none; /*Retirando o preenchimento da caixa selecionada para colocar os dados*/
+    border-radius: 8px;
+
+}
+
+/* !Retirando a aparência de select dos campos select (setinhas) para navegadores
+!Chrome e Mozilla - geralmente os mais utilizados */
+
+form select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+form label {
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+/* !Pegando o field group que tem dois fields para dar um espaço entre eles */
+
+form .field-group .field + .field{
+    margin-left: 24px;
+}
+
+form button {
+    width: 260px;
+    height: 56px;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+
+    border: 0;
+    margin-top: 40px;
+    transition: background-color 400ms;
+}
+
+form button:hover{
+    background-color: #2fb86e;
+    
+}
