--- a/styles/modal.css
+++ b/styles/modal.css
@@ -13,6 +13,10 @@
     transition: 400ms;
 }
 
+#modal.hide {   /*!O modal tem uma classe hide*/
+    display: none;
+}
+
 #modal .content {
     color: white;
     width: 420px;
