--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -17,6 +17,14 @@
     #page-home main{
         align-items: center;
     } 
+
+    #page-search-results .cards {
+        grid-template-columns: 1fr;
+    }
+
+    #page-search-results .cards img {
+        height: 320px;
+    }
 }
 
 @media(min-width: 1800px){
