--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -15,13 +15,7 @@
 <body>
     <div id="page-create-point">
 
-        <header>
-            <img src="/assets/logo.svg" alt="Logomarca">
-            <a href="/">
-                <span></span>
-                Voltar para a Home
-            </a>
-        </header>
+        {% include "partials/page-header.html" %}
 
         <form action="" method="get">
 
