adjusting code to a partial html file

--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -15,14 +15,8 @@
 <body>
     <div id="page-search-results">
 
-        <header>
-            <img src="/assets/logo.svg" alt="Logomarca">
-            <a href="/index.html">
-                <span></span>
-                Voltar para a Home
-            </a>
-        </header>
-
+    {% include "partials/page-header.html" %}
+    
         <main>
             <h4>
                 <strong>2 pontos</strong> encontrados
