--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -1,69 +1,65 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}
+{# Herdando caracteristicas do arquivo layout.html #}
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet"> 
-    
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/create-point.css">
-    <link rel="stylesheet" href="/styles/responsive.css">
+{% set pageId = "page-create-point" %}
 
+{% block title %}
     <title>Criar um ponto de coleta</title>
-</head>
-<body>
-    <div id="page-create-point">
+{% endblock title %}
 
-        {% include "partials/page-header.html" %}
+{% block styles %}
+    <link rel="stylesheet" href="/styles/create-point.css">
+{% endblock styles %}
 
-        <form action="" method="get">
+{% block content %}
+    {% include "partials/page-header.html" %}
 
-            <h1>Cadastro do ponto de coleta</h1>
-            <!-- !Agrupamento das duas partes (elementos) do formulario (dados e imagens) -->
-            <fieldset>
-                <legend>
-                    <h2>Dados da entidade</h2>
-                </legend>
+    <form action="" method="get">
+
+        <h1>Cadastro do ponto de coleta</h1>
+        <!-- !Agrupamento das duas partes (elementos) do formulario (dados e imagens) -->
+        <fieldset>
+            <legend>
+                <h2>Dados da entidade</h2>
+            </legend>
+
+            <div class="field">
+                <label for="name">Nome da entidade</label>
+                <input type="text" name="name" required="required">
+            </div>
+
+            <div class="field-group">
+                <div class="field">
+                    <label for="address">Endereço</label>
+                    <input type="text" name="address" required="required">
+                </div>
+                <div class="field">
+                    <label for="address2">Número/Complemento</label>
+                    <input type="text" name="address2" required="required">
+                </div>
+            </div>
+
+            <div class="field-group">
+                <div class="field">
+                    <label for="state">Estado</label>
+                    <select name="uf" required="required">
+                        <option value="">Selecione o estado</option>
+                    </select>
+
+                    <!-- Criando um input escondido para alterar o código relacionado ao estado advindo da API do IBGE para o seu nome -->
+
+                    <input type="hidden" name="state">
+
+                </div>
 
                 <div class="field">
-                    <label for="name">Nome da entidade</label>
-                    <input type="text" name="name" required>
-                </div>
-
-                <div class="field-group">
                     <div class="field">
-                        <label for="address">Endereço</label>
-                        <input type="text" name="address" required>
-                    </div>
-                    <div class="field">
-                        <label for="address2">Número/Complemento</label>
-                        <input type="text" name="address2" required>
-                    </div>
-                </div>
-
-                <div class="field-group">
-                    <div class="field">
-                        <label for="state">Estado</label>
-                        <select name="uf" required>
-                            <option value="">Selecione o estado</option>
+                        <label for="city">Cidade</label>
+                        <select name="city" disabled="disabled" required="required">
+                            <option value="">Selecione a cidade</option>
                         </select>
 
-                    <!-- Criando um input escondido para alterar o código relacionado
-                        ao estado advindo da API do IBGE para o seu nome -->
-                        
-                        <input type="hidden" name="state">
-                        
                     </div>
-
-                    <div class="field">
-                        <div class="field">
-                            <label for="city">Cidade</label>
-                            <select name="city" disabled required>
-                                <option value="">Selecione a cidade</option>
-                            </select>
-                            
-                        </div>                    
                 </div>
             </fieldset>
 
@@ -71,7 +67,7 @@
                 <legend>
                     <h2>Itens de coleta</h2>
                 </legend>
-                
+
                 <div class="itens-grid">
                     <li data-id="1">
                         <img src="/assets/lampadas.svg" alt="Lâmpadas">
@@ -110,8 +106,8 @@
 
         </form>
 
+{% endblock content %}
 
-    </div>
-<script src="/scripts/create-point.js"></script>
-</body>
-</html> 
+{% block scripts %}
+    <script src="/scripts/create-point.js"></script>
+{% endblock scripts %}
