--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -1,54 +1,52 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}
+{# Herdando caracteristicas do arquivo layout.html #}
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet"> 
-    
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/search-results.css">
-    <link rel="stylesheet" href="/styles/responsive.css">
+{% set pageId = "page-search-results" %}
 
+{% block title %}
     <title>Resultado da pesquisa</title>
-</head>
-<body>
-    <div id="page-search-results">
+{% endblock title %}
 
+{% block styles %}
+    <link rel="stylesheet" href="/styles/search-results.css">
+{% endblock styles %}
+
+{% block content %}
     {% include "partials/page-header.html" %}
-    
-        <main>
-            <h4>
-                <strong>2 pontos</strong> encontrados
-            </h4>
-            <div class="cards">
-                <div class="card">
-                    <img src="https://23pxcp3u31lgiybw92v8rma1-wpengine.netdna-ssl.com/wp-content/uploads/2018/10/Recyclers-600x400.jpg" alt="Colectoria">
-                    <h1>Colectoria</h1>
-                    <h3>Resíduos eletrônicos,<br/> 
-                        Lâmpadas
-                    </h3>
-                    <p>Rio do Sul, Santa Catarina <br/>
-                        Guilherme Gemballa, Jardim América <br/>
-                        Nº260
 
-                    </p>
-                </div>
+    <main>
+        <h4>
+            <strong>2 pontos</strong>
+            encontrados
+        </h4>
+        <div class="cards">
+            <div class="card">
+                <img src="https://23pxcp3u31lgiybw92v8rma1-wpengine.netdna-ssl.com/wp-content/uploads/2018/10/Recyclers-600x400.jpg" alt="Colectoria">
+                <h1>Colectoria</h1>
+                <h3>Resíduos eletrônicos,<br/>
+                    Lâmpadas
+                </h3>
+                <p>Rio do Sul, Santa Catarina
+                    <br/>
+                    Guilherme Gemballa, Jardim América
+                    <br/>
+                    Nº260
 
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1589860518314-34bcd4d6bdff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Colectoria">
-                    <h1>Papersider</h1>
-                    <h3>Papéis e Papelão</h3>
-                    <p>Rio do Sul, Santa Catarina <br/>
-                        Guilherme Gemballa, Jardim América <br/>
-                        Nº260
-
-                    </p>
-                </div>
+                </p>
             </div>
-        </main>
 
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1589860518314-34bcd4d6bdff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Colectoria">
+                <h1>Papersider</h1>
+                <h3>Papéis e Papelão</h3>
+                <p>Rio do Sul, Santa Catarina
+                    <br/>
+                    Guilherme Gemballa, Jardim América
+                    <br/>
+                    Nº260
 
-    </div>
-</body>
-</html> 
+                </p>
+            </div>
+        </div>
+    </main>
+{% endblock content %}
