--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}  {# Herdando caracteristicas do arquivo layout.html #}
 
-{% set bodyId = "page-home" %}
+{% set pageId = "page-home" %}
 
 {% block styles %}    
     <link rel="stylesheet" href="/styles/home.css">
