--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -25,6 +25,15 @@
     #page-search-results .cards img {
         height: 320px;
     }
+
+    #page-create-point .field-group {
+        flex-direction: column;
+
+    }
+
+    #page-create-point .field-group .field + .field {
+        margin-left: 0;
+    }
 }
 
 @media(min-width: 1800px){
