--- a/src/views/partials/point-created.html
+++ b/src/views/partials/point-created.html
@@ -1,6 +1,6 @@
-<div id="modal" class="hide">
+<div id="modal" class="point">
     <div class="content">
-       <img src="/assests/check.svg" alt="Cadastro concluído">
+       <img src="/assets/check.svg" alt="Cadastro concluído">
         <h1>Cadastro concluído</h1>
     </div>
 </div>
