--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -9,6 +9,7 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/styles/create-point.css">
+    <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
@@ -120,7 +121,16 @@
 
         </form>
 
+
+
 {% endblock content %}
+
+{% block modal %}    
+    {% if saved %}
+        {%include "partials/point-created.html"%}
+    {% endif %}
+{% endblock modal %}
+
 
 {% block scripts %}
     <script src="/scripts/create-point.js"></script>
