--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,9 +1,12 @@
-
+body {
+    background-color: white;
+}
 body::after {           /*!Criação de um pseudo-elemento*/
     content: "";
-    position: fixed;
-    background: white;
-    top: 280px;
+    position: absolute;
+    background: #f0f0f5;
+    top: 0px;
+    height: 16rem;
     right: 0;
     left: 0;
     bottom: 0;
